Text sizing issue on tablet

--- a/src/scss/post-grid.scss
+++ b/src/scss/post-grid.scss
@@ -5,7 +5,6 @@ main.site-main {
   }
 
   .article-container {
-    text-align: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
@@ -42,7 +41,7 @@ main.site-main {
       }
 
       .entry-title, .posted-on {
-        font-size: 12pt;
+        font-size: 1em;
         font-weight: 400;
         line-height: 1em;
         padding: 0 $default-padding;
@@ -69,6 +68,9 @@ main.site-main {
         img {
           height: 116px !important;
           width: 208px !important;
+        }
+        .entry-title, .posted-on {
+          font-size: .9em;
         }
         padding: 0 $default-padding $default-padding 0;
       }
